--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>ХОЧУ ВЛАДИКА</title>
 </head>
 <body>
-<marquee><img src= "C:\Users\nmark\OneDrive\Desktop\эксперементы\jk.jpg" width= "270" height="200"></marquee>
+<marquee><img src= "jk.jpg" width= "270" height="200"></marquee>
 
 </body>
 </html/>
