--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
 <head>
 <title>ХОЧУ ВЛАДИКА</title>
+  <style>
+  body { background: #FF1493 ; color: ; }
+</style>
 </head>
 <body>
+  <h1>ХОЧУ ВЛАДИКА</h1>
 <marquee><img src= "jk.jpg" width= "270" height="200"></marquee>
 
 </body>
