--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
   <h1>ХОЧУ ВЛАДИКА</h1>
 <marquee><img src= "jk.jpg" width= "270" height="200"></marquee>
-<marquee><img src= "jk.jpg" width= "270" height="200"></marquee>
+<marquee> direction="left" <img src= "jk.jpg" width= "270" height="200"></marquee>
 </body>
 </html/>
