--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <h1>ХОЧУ ВЛАДИКА</h1>
 <marquee><img src= "jk.jpg" width= "270" height="200"></marquee>
 <marquee direction="right" >  <img src= "jk.jpg" width= "270" height="200"></marquee>
+  <marquee direction="up" >  <img src= "jk.jpg" width= "270" height="200"></marquee>
+  <marquee direction="down" >  <img src= "jk.jpg" width= "270" height="200"></marquee>
 </body>
 </html/>
