--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
   <h1>ХОЧУ ВЛАДИКА</h1>
-<marquee><img src= "jk.jpg" width= "270" height="200"></marquee>
-   <marquee direction="up" >  <img src= "jk.jpg" width= "270" height="200"></marquee>
-  <marquee direction="down" >  <img src= "jk.jpg" width= "270" height="200"></marquee>
-<marquee direction="right" >  <img src= "jk.jpg" width= "270" height="200"></marquee>
+  <a href="vladik.html"><marquee><img src= "jk.jpg" width= "270" height="200"></marquee></a>
+   <a href="vladik.html"><marquee direction="up" >  <img src= "jk.jpg" width= "270" height="200"></marquee></a>
+ <a href="vladik.html"> <marquee direction="down" >  <img src= "jk.jpg" width= "270" height="200"></marquee></a>
+<a href="vladik.html"><marquee direction="right" >  <img src= "jk.jpg" width= "270" height="200"></marquee></a>
  
 </body>
 </html/>
