--- a/vladik.html
+++ b/vladik.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1>Ты нехочешь владика?</h1>
-<a href="index.html">да</a>
-<p><a href="POSHEL NAHUY UEBOK.html">нет</a></p>
+<a href="index.html">НЕТ</a>
+<p><a href="POSHEL NAHUY UEBOK.html">ДА</a></p>
 </body>
 </html/>
